k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gym-app-service
spec:
  selector:
    app: gym-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
